# EEN445-PV_Calculator_Software

./: README.md  app.py  interface-demo.py  pyproject.toml
App/: app.py  calculator.py  image_resizer.py  interface.py
Demo/: tkinker-demo.py
TKinterPlayground/: tkinker-demo.py
