[tool.poetry]
name = "een445-pv-calculator-software"
version = "0.1.0"
description = "A simple desktop utility with UI to calculate the minimum distance between panels to avoid shading in the case of single, double and/or triple panel system."
authors = ["suprch4rg3d <emmanueloikonomou@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
tkintermapview = "^1.29"
ttkbootstrap = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
